--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   <!-- Load the page styles. -->
   <link href="css/style.css" rel="stylesheet">
 
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
   <!--
   Uncomment the <script> tag below when you're ready to add an interactive Google Map to your resume!
   -->
 <script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
-<script src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyB_JPClNc70Q8zkdvO5jNnkL_TIDOS5qpE"></script> 
+<!-- <script src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyB_JPClNc70Q8zkdvO5jNnkL_TIDOS5qpE"></script>  -->
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
