--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   <!--
   Uncomment the <script> tag below when you're ready to add an interactive Google Map to your resume!
   -->
-<script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
-<script src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDyVvXfMWFXiI60Oon63A1fW4ZpUz8fyE4"></script> 
+<!-- <script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script> -->
+<script src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyA8Mw1ixD6vrL1S1v0TSppYFcYzR3_8Pgg"></script> 
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
